--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
         .btn-primary:hover {
             background: #34495e;
         }
+        .adsense-container {
+            min-width: 250px;
+            margin: 20px 0;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -210,6 +215,19 @@
             <h2 class="text-center mb-5"><i class="fas fa-briefcase icon"></i> Salariés : Déductions, Frais Professionnels, PER, Avantages Sociaux</h2>
             <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="Environnement professionnel" class="img-fluid">
             
+            <!-- Manual Ad Unit -->
+            <div class="adsense-container">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-4589643544527855"
+                     data-ad-slot="YOUR_AD_SLOT_ID"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
             <p>En tant que salarié, l'impôt sur le revenu (IR) est calculé sur vos salaires nets imposables, après déductions et abattements. Pour 2026, le barème de l'IR reste gelé en raison de l'année blanche budgétaire annoncée le 15 juillet 2025 par le gouvernement Bayrou. Ce gel, sans revalorisation face à l'inflation (1,1-1,3% estimée pour 2025), augmente mécaniquement l'impôt pour les salaires en progression, avec un impact moyen de +73 € pour les classes moyennes (OFCE). Cela génère 1,2 milliard € de recettes pour l'État, mais pénalise les salariés indexés sur l'inflation (art. 197 CGI).</p>
 
             <p>Pour minimiser l'IR, optimisez les déductions. Le quotient familial (1 part célibataire, 2 couple, +0,5/enfant) module l'imposition. Exemple : Célibataire avec 40 000 € net imposable en 2025 : IR brut = (29 315 - 11 498) × 11% + (40 000 - 29 315) × 30% ≈ 5 200 €, avant déductions. Avec optimisations, réduction possible de 20-30%.</p>
